# WEB_HW_2

./: Dockerfile  LICENSE  README.MD  logs.txt  pyproject.toml
src/bot_assistant_mx/: __main__.py  logs.txt
src/bot_assistant_mx2/: AddressBook.py  Bot.py  info.py
