[tool.poetry]
name = "bot_assistant_mx"
version = "0.0.1"
description = ""
authors = ["antonii <antonii.illarionov@gmail.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
assistant = "bot_assistant_mx.__main__:main"

[project.scripts]
ass = "bot_assistant_mx.__main__:main"
